--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,8 @@
     <string name="install_easy_track_msg">Please install the EasyTrack Authenticator and reopen the application!</string>
     <string name="success_auth_and_connect_campaign_msg">Successfully authorized and connected to the EasyTrack campaign!</string>
 
+    <!--    테스트 후에 새 캠페인으로 변경할 것 -->
+<!--    <string name="stress_campaign_id" translatable="false">2</string>-->
     <string name="stress_campaign_id" translatable="false">3</string>
 
     <string name="app_name">MINDSCOPE</string>
