2021-01-13 / jeongin / 마음기록에서 step에 따라 상세화면 UI수정 - step1일때 태그, step2일때 스트레스 리포트가 보이도록 수정함 - 달력에서 각 날짜 클릭했을때 컨디션 계산 - 제플린과 비교하여 다른 사항 수정

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -141,10 +141,10 @@
     <string name="time_duration2">11:00 &#8211; 03:00</string>
     <string name="time_duration3">03:00 &#8211; 07:00</string>
     <string name="time_duration4">07:00 &#8211; 11:00</string>
-    <string name="time_step2_duration1">07:00 AM부터 11:00 AM까지의</string>
-    <string name="time_step2_duration2">11:00 AM부터 03:00 PM까지의</string>
-    <string name="time_step2_duration3">03:00 PM부터 07:00 PM까지의</string>
-    <string name="time_step2_duration4">07:00 PM부터 11:00 PM까지의</string>
+    <string name="time_step2_duration1">07:00 AM - 11:00 AM </string>
+    <string name="time_step2_duration2">11:00 AM - 03:00 PM </string>
+    <string name="time_step2_duration3">03:00 PM - 07:00 PM </string>
+    <string name="time_step2_duration4">07:00 PM - 11:00 PM </string>
     <string name="time_report_duration1">During 07:00 AM - 11:00 AM</string>
     <string name="time_report_duration2">During 11:00 AM - 03:00 PM</string>
     <string name="time_report_duration3">During 03:00 PM - 07:00 PM</string>
