2021-01-15/jeongin/ 버그 픽스 - CarechildFragment condition 2,3일때 상세 화면 수정 - 마음 기록에서 step2일때 예측 결과 없을때 상단 버튼 바뀌지 않도록 수정 - 이유는 무엇일까요 string 삭제
- [x] 스트레스 리포트에서 스트레스 레벨 1일때 문구 지우기

- [x] 스트레스 리포트에서 리스트뷰 divider 지우기

- [x] 지금의 나에서 features_id 겹쳐서 보이는 문제

- [x] 마음 기록에서 중단 되는 문제

- [x] 마음 기록 상세에서 컨디션에 따라 컨테이너 보이도록 바꾸기
- [x] 마음 기록 상세 정각 이전에는 안 보이도록
- [x] 마음 기록 상세 feature_id 제대로 안보이는 문제
- [x] 마음 기록 step2 시작일 11시에는 데이터 못 찾음

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -355,8 +355,8 @@
 
     <string name="when_no_intervention_performed">아직 스트레스를 해소하지 않았습니다!\n스트레스를 해소해보세요!</string>
 
-    <string name="stress_report_lv0">당신은 스트레스가 낮을 때,</string>
-    <string name="stress_report_lv1">당신은 스트레스가 조금 높을 때,</string>
+    <string name="stress_report_lv0"></string>
+    <string name="stress_report_lv1">제가 참고한 데이터는요,</string>
     <string name="stress_report_lv2">당신은 스트레스가 높을 때,</string>
 
 </resources>
