2021-01-28/jeongin/v.2.1.0 - 월요일부터 시작하는 캠페인 ID 4 - condition 5일 주기로 변경 - 스트레스 리포트 feature 뷰 수정

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,8 @@
     <string name="success_auth_and_connect_campaign_msg">Successfully authorized and connected to the EasyTrack campaign!</string>
 
 
-    <string name="stress_campaign_id" translatable="false">3</string>
+<!--    <string name="stress_campaign_id" translatable="false">3</string>-->
+    <string name="stress_campaign_id" translatable="false">4</string>
 
     <string name="app_name">MINDSCOPE</string>
     <string name="ConnectionEstablishedMsg">Connection established</string>
